crates/captval_derive/tests/compile_fail/complete_enum.stderr
error: Must derive on a struct

         = help: This macro can only be implemented on a struct.

               #[derive(Captval)]
               struct MyStruct {
                   #[captcha]
                   captval: String,
               }

 --> tests/compile_fail/complete_enum.rs:4:10
  |
4 | pub enum ContactEnum {
  |          ^^^^^^^^^^^
